Progress so far
The project can now print shapes to the screen and can scale, move or rotate the shapes

--- a/DX11Starter.vcxproj
+++ b/DX11Starter.vcxproj
@@ -124,12 +124,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DXCore.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Transformation.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BufferStructs.h" />
     <ClInclude Include="DXCore.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Transformation.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
